--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
-click==7.1.2
-Flask==1.1.2
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+asgiref==3.4.1
+backports.entry-points-selectable==1.1.1
+certifi==2021.10.8
+distlib==0.3.3
+Django==4.0.1
+filelock==3.3.2
+flake8==3.9.2
+mccabe==0.6.1
+pipenv==2021.11.9
+platformdirs==2.4.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+six==1.16.0
+sqlparse==0.4.2
+tinydb==4.5.1
+tzdata==2021.5
+virtualenv==20.10.0
+virtualenv-clone==0.5.7
